--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-} */
+body {
+  margin: 3vw 10vw;
+  background-color: #d2d2d2;
+}
 
 #root {
   margin: 0;
@@ -12,33 +10,11 @@
   font-family: sans-serif, 'Times New Roman';
 }
 
-/* .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.content {
+  background-color: #bcbcbc;
+  border-radius: 20px;
+  padding: 0 5vw 5vw 5vw;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-} */
 
 .card {
   padding: 2em;
@@ -46,4 +22,21 @@
 
 .read-the-docs {
   color: #888;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+input,
+textarea {
+  margin-bottom: 10px;
+}
+
+textarea {
+  width: 300px;
+  height: 150px;
+  resize: none;
 }
