--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,13 @@ textarea {
   height: 150px;
   resize: none;
 }
+
+button{
+  cursor: pointer;
+  border: none;
+  border-radius: 10px;
+  color: rgb(0, 126, 217);
+  padding: 5px 10px;
+  font-size: 1rem;
+  font-weight: 700;
+}
