--- a/src/components/PostList/PostList.module.css
+++ b/src/components/PostList/PostList.module.css
@@ -6,6 +6,7 @@
 
 .postsList h1 {
   font-size: 2.5rem;
+  padding: 0.5em;
 }
 .postsList {
   text-align: center;
@@ -19,4 +20,20 @@
 .postsList p:first-child {
   font-size: 1.5rem;
   font-weight: 700;
+}
+
+.post{
+  margin: 0.9em;
+}
+
+.post{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.post a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
