--- a/src/components/PostPage/Comments/PostComments.module.css
+++ b/src/components/PostPage/Comments/PostComments.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   gap: 20px;
-  margin: 30px 0;
+  margin: 10px 0;
 }
 
 .singleComment{
@@ -12,4 +12,8 @@
   box-shadow: 0px 6px 8px #bebebe;
   background-color: rgb(225, 224, 224);
   
+}
+
+.singleComment p {
+  margin-bottom: 0.5em;
 }
