Add gap to post list author and date

--- a/src/components/PostList/PostList.module.css
+++ b/src/components/PostList/PostList.module.css
@@ -23,17 +23,15 @@
 }
 
 .post{
-  margin: 0.9em;
-}
-
-.post{
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0.9em;
 }
 
 .post a {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 0.5em
 }
