--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,20 +1,36 @@
-.loader {
-  margin-top: 3em;
+/* Loader.module.css */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 99999;
+}
+
+.loaderContainer {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1em;
+  gap: 1rem;
 }
-.loader p {
-  font-size: 2rem;
-}
-.loader .spinner {
-  border: 16px solid #f3f3f3;
-  border-top: 16px solid #0284c7;
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #f3f3f3;
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 3s linear infinite;
+  border-top: 5px solid #3498db;
+  animation: spin 1s linear infinite;
+}
+
+.text {
+  color: #fff;
 }
 
 @keyframes spin {
