--- a/src/components/Comment/Comment.module.css
+++ b/src/components/Comment/Comment.module.css
@@ -1,12 +1,6 @@
-.comments{
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  gap: 20px;
-  margin: 10px 0;
-}
 
-.singleComment{
+
+.comment{
   border-radius: 10px;
   padding: 10px;
   box-shadow: 0px 6px 8px #bebebe;
