Restyle all components & hooks
Add semi-colons & delete blank lines end unused
code.

--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -1,11 +1,11 @@
-.title{
+.title {
   font-weight: 700;
   text-align: center;
   font-size: 1.6rem;
-  padding: .5em;
+  padding: 0.5em;
 }
 
-.content{
+.content {
   line-height: 2;
   font-size: 1.5rem;
   padding: 0.5em 0;
