--- a/src/components/form/Textarea.module.css
+++ b/src/components/form/Textarea.module.css
@@ -1,7 +1,9 @@
 .textarea {
   display: grid;
-  align-items: center;
   gap: 0.2rem;
+  width: 300px;
+  height: 150px;
+  resize: none;
 }
 
 .error {
