--- a/src/components/Header/Logo/Logo.module.css
+++ b/src/components/Header/Logo/Logo.module.css
@@ -2,7 +2,7 @@
   font-size: var(--fs-primary-heading);
   text-decoration: none;
   font-weight: var(--fw-bold);
-  color: rgb(0, 126, 217);
+  color: var(--clr-primary-400);
   text-transform: uppercase;
 }
 
