--- a/src/components/form/Button.module.css
+++ b/src/components/form/Button.module.css
@@ -2,7 +2,8 @@
   cursor: pointer;
   border: none;
   border-radius: 10px;
-  color: rgb(0, 126, 217);
+  color: var(--clr-accent-400);
+  background-color: var(--clr-accent-200);
   padding: 5px 10px;
   font-size: 1rem;
   font-weight: 700;
