--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@
   --ff-primary: 'Inter', 'sans-serif';
 
   --ff-body: var(--ff-primary);
-  --ff-heading: var(var(--ff-primary));
+  --ff-heading: var(--ff-primary);
 
   --fw-regular: 400;
   --fw-semi-bold: 600;
@@ -50,7 +50,7 @@
   --fs-500: 1.125rem;
   --fs-600: 1.375rem;
   --fs-700: 1.5rem;
-  --fs-800: 5rem;
+  --fs-800: 3.5rem;
   --fs-900: clamp(2rem, 10vw - 0.5rem, 3.25rem);
 
   --fs-body: var(--fs-400);
@@ -61,11 +61,11 @@
   --size-200: 0.5rem;
   --size-300: 0.75rem;
   --size-400: 1rem;
-  --size-500: 1.5rem;
-  --size-600: 2rem;
-  --size-700: 3rem;
-  --size-800: 4rem;
-  --size-900: 5rem;
+  --size-500: 1.25rem;
+  --size-600: 1.5rem;
+  --size-700: 2rem;
+  --size-800: 3rem;
+  --size-900: 4rem;
 }
 
 body {
