--- a/src/pages/PostList/PostList.module.css
+++ b/src/pages/PostList/PostList.module.css
@@ -4,40 +4,38 @@
 
   width: min(var(--max-width), 100% - (var(--padding) * 2));
   margin-inline: auto;
-
-  text-align: center;
+}
+.post {
+  margin-bottom: var(--size-700);
+  display: flex;
+  flex-direction: column;
+  gap: var(--size-100);
+  align-items: flex-start;
 }
 
-.list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+.title,
+.postTitle {
+  font-size: var(--fs-600);
+  font-weight: var(--fw-semi-bold);
 }
 
 .title {
-  font-size: 2.5rem;
-  padding: 0.5em;
+  margin-bottom: var(--size-700);
 }
 
-.container p {
-  display: inline;
+.postDate {
+  font-size: var(--fs-300);
+  color: var(--clr-secondary-400);
+  font-weight: var(--fw-semi-bold);
 }
 
-.container p:first-child {
-  font-size: 1.5rem;
-  font-weight: 700;
-}
-
-.postDetails {
+.titleSection {
+  width: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  margin: 0.9em;
+  justify-content: space-between;
 }
 
-.postDetails a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5em;
+.buttons :first-child {
+  margin-right: var(--size-200);
 }
