--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -1,10 +1,24 @@
-.title{
-  font-weight: 700;
-  text-align: center;
-  font-size: 1.6rem;
-  padding: .5em;
+
+.post {
+  padding-block:  var(--size-400);
+  display: flex;
+  flex-direction: column;
+  gap: var(--size-100);
+  align-items: flex-start;
 }
 
-.content{
-  padding: 0.5em 0;
+.title,
+.postTitle {
+  font-size: var(--fs-600);
+  font-weight: var(--fw-semi-bold);
+}
+
+.buttons :first-child {
+  margin-right: var(--size-200);
+}
+
+.postDate {
+  font-size: var(--fs-300);
+  color: var(--clr-secondary-400);
+  font-weight: var(--fw-semi-bold);
 }
