--- a/src/pages/PostPage/PostPage.module.css
+++ b/src/pages/PostPage/PostPage.module.css
@@ -1,3 +1,11 @@
-.headerPost {
-  padding: 0.5em 0;
+.container {
+  --max-width: 1110px;
+  --padding: 1rem;
+
+  width: min(var(--max-width), 100% - (var(--padding) * 2));
+  margin-inline: auto;
+}
+
+.postPage{
+  padding-block: var(--size-400);
 }
