--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,8 @@
   --size-900: 4rem;
 }
 
+/* General Styling: */
+
 body {
   font-size: var(--fs-body);
   font-family: var(--ff-body);
@@ -78,4 +80,21 @@ body {
 a {
   text-decoration: none;
   color: inherit;
-} 
+}
+
+form {
+  display: grid;
+  gap: 0.75rem;
+  max-width: 30ch;
+  margin: 2rem auto;
+}
+
+label {
+  font-size: var(--fs-300);
+}
+
+input {
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+  border: 1px solid var(--clr-primary-400);
+}
