--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,7 @@ label {
   font-size: var(--fs-300);
 }
 
-input {
+input, textarea {
   padding: 0.25rem 0.5rem;
   border-radius: 0.25rem;
   border: 1px solid var(--clr-primary-400);
