--- a/src/pages/PostPage/PostPage.module.css
+++ b/src/pages/PostPage/PostPage.module.css
@@ -1,3 +1,7 @@
+.postPage {
+  padding-block: var(--size-400);
+}
+
 .container {
   --max-width: 1110px;
   --padding: 1rem;
@@ -6,6 +10,8 @@
   margin-inline: auto;
 }
 
-.postPage{
-  padding-block: var(--size-400);
+@media (min-width: 800px) {
+  .container {
+    width: min(1100px, 100% - (4rem * 2));
+  }
 }
