--- a/src/components/Comments/Comments.module.css
+++ b/src/components/Comments/Comments.module.css
@@ -1,10 +1,11 @@
 .comments {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 15px;
   margin: 10px 0;
 }
 
-.headerComment {
+.title {
   padding: 0.5em 0;
+  font-weight: var(--fw-semi-bold);
 }
