--- a/src/index.css
+++ b/src/index.css
@@ -52,10 +52,10 @@
   --fs-600: 1.375rem;
   --fs-700: 1.5rem;
   --fs-800: 3.5rem;
-  --fs-900: clamp(2rem, 10vw - 0.5rem, 3.25rem);
+  --fs-900: clamp(2rem, 17.3vw - 0.5rem, 10.4rem);
 
   --fs-body: var(--fs-400);
-  --fs-primary-heading: var(--fs-800);
+  --fs-primary-heading: var(--fs-900);
   --fs-secondary-heading: var(--fs-700);
 
   --size-100: 0.25rem;
@@ -86,7 +86,7 @@ form {
   display: grid;
   gap: 0.75rem;
   max-width: 30ch;
-  margin: 2rem auto;
+  margin: 0 auto;
 }
 
 label {
