--- a/src/components/Comment/Comment.module.css
+++ b/src/components/Comment/Comment.module.css
@@ -2,9 +2,13 @@
   border-radius: 10px;
   padding: 10px;
   box-shadow: 0px 6px 8px #bebebe;
-  background-color: var(--clr-secondary-200)
+  background-color: var(--clr-secondary-200);
 }
 
-.singleComment p {
-  margin-bottom: 0.5em;
+.commentHeader {
+  font-size: var(--fs-300);
+}
+
+.username {
+  font-weight: var(--fw-semi-bold);
 }
