--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -1,6 +1,5 @@
-
 .post {
-  padding-block:  var(--size-400);
+  padding-block: var(--size-400);
   display: flex;
   flex-direction: column;
   gap: var(--size-100);
@@ -17,8 +16,12 @@
   margin-right: var(--size-200);
 }
 
-.postDate {
+.postHeader {
   font-size: var(--fs-300);
   color: var(--clr-secondary-400);
   font-weight: var(--fw-semi-bold);
+}
+
+.username {
+  font-weight: var(--fw-bold);
 }
