--- a/src/components/Notifications/NotificationsList.module.css
+++ b/src/components/Notifications/NotificationsList.module.css
@@ -1,20 +1,20 @@
 .notificationsContainer {
   position: fixed;
-  top: 20px;
+  top: 50px;
   right: 20px;
   z-index: 9999;
 }
 
 .notification {
-  background-color: #333;
-  color: #fff;
+  background-color: var(--clr-secondary-200);
+  color: var(--clr-secondary-400);
   padding: 10px 20px;
   margin-bottom: 10px;
   border-radius: 5px;
 }
 
 .notification.success {
-  background-color: green;
+  background-color: var(--clr-secondary-200);
 }
 
 .notification.error {
